# gofer

./: .gitignore  Cargo.toml  LICENSE  README.md  README.ru.md
.cargo/: config.ci.toml  config.toml
.github/: README.md
.github/workflows/: ci.yml  release.yml
.gofer/: config.toml
docs/: FIXME_PHASE0.md  INT8_QUANTIZATION.md  Manifest.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE_0_1_SUMMARY.md  PHASE_0_IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md  cas.md  idea.md  new.md
docs/desc/: INDEX.md  OVERVIEW.md
docs/desc/phase-0/: 001_get_index_status.md  002_validate_index.md  003_force_reindex.md  004_read_file_skeleton.md  005_lightweight_checks.md  006_search_with_scores.md  007_suggest_commit.md  008_server_side_cache.md  009_read_function_context.md  010_read_types_only.md  011_smart_file_selection.md  012_incremental_indexing.md  013_batch_operations.md  014_query_optimization.md  015_connection_pooling.md  016_error_recovery.md
docs/desc/phase-1/: 009_get_test_coverage.md  010_get_runtime_examples.md  011_find_error_patterns.md  012_get_code_evolution.md  013_find_hotspots.md  014_find_all_todos.md  015_get_code_churn.md  016_analyze_uncommitted_changes.md  017_suggest_tests_for_changes.md  018_check_breaking_changes.md  019_get_symbol_context.md  020_smart_context_bundle.md
docs/desc/phase-2/: 021_get_code_owners.md  022_get_design_decisions.md  023_get_related_discussions.md  024_search_similar_problems.md  025_search_logs.md  026_find_production_errors.md  027_get_function_metrics.md  028_find_slow_operations.md  029_get_database_schema.md  030_analyze_query_performance.md  031_get_code_stats.md
docs/desc/phase-3/: 032_search_ranked.md  033_scan_for_secrets.md  034_check_dependencies.md  035_find_sql_injection_risks.md  036_check_xss_vulnerabilities.md  037_analyze_code_complexity.md  038_detect_code_smells.md  039_find_unused_code.md  040_suggest_refactoring.md
docs/features/: 01-list-directory.md  02-search-files.md  03-get-file-metadata.md  04-read-file.md  05-read-file-chunk.md  06-get-file-diff.md  07-write-file.md  08-patch-file.md  09-append-to-file.md  10-create-directory.md  11-move-file-or-directory.md  12-delete-safe.md  13-content-addressable-buffer.md  14-atomic-transactions.md  15-auto-format-import.md  16-package-manager.md  17-execution-sandbox.md  18-code-archaeology.md  19-collaboration-pr.md  20-trash-management.md  21-workspace-state.md  README.md
docs/next_stage/: IMPLEMENTATION_PLAN.md  OPTIMIZATION_OPPORTUNITIES.md  ROADMAP.md  ROADMAP_EXTENSIONS.md  ROADMAP_INFRASTRUCTURE.md  ROADMAP_SANDBOXES.md  SMART_COMMIT_DESIGN.md
migrations/: 001_init.sql  002_references.sql  003_knowledge.sql  004_diagnostics.sql  005_domains.sql  006_summaries.sql  007_structural_links.sql  008_subprojects.sql  009_index_metadata.sql  010_chunk_cache.sql  011_audit_log.sql  012_golden_samples_unique.sql  014_query_optimization.sql  015_add_indexing_status_and_language.sql  016_rkyv_optimization.sql
packaging/: README.md
packaging/scripts/: build-all.sh  build-deb.sh  build-rpm.sh
src/: cache.rs  commit.rs  error.rs  error_recovery.rs  logger.rs  main.rs  resource_limits.rs  scoring_index.rs
src/daemon/: metrics_http.rs  mod.rs  registry.rs  state.rs  tools.rs
src/daemon/handlers/: batch.rs  cas_buffer.rs  code_quality.rs  common.rs  diagnostics.rs  file_ops.rs  files.rs  git.rs  index.rs  lang_tools.rs  mod.rs  project.rs  rust_analyzer.rs  rust_analyzer_extended.rs  sandbox.rs  search.rs  symbols.rs  transactions.rs  trash.rs
src/indexer/: context.rs  diagnostics.rs  domains.rs  embedder.rs  git.rs  mod.rs  pipeline.rs  reranker.rs  service.rs  summarizer.rs  watcher.rs
src/indexer/parser/: chunking.rs  core.rs  mod.rs  skeleton.rs  type_fields.rs
src/ipc/: bridge.rs  client.rs  mod.rs  protocol.rs  server.rs
src/languages/: go.rs  mod.rs  python.rs  rust.rs  rust_analyzer.rs  typescript.rs  vue.rs
src/models/: chunk.rs  mod.rs
src/storage/: lance.rs  mod.rs  sqlite.rs
tests/: 00_methodology.md  01_read_file_comparison.md  02_search_vs_grep_comparison.md  03_skeleton_vs_read_comparison.md  04_get_symbols_vs_grep_comparison.md  05_patch_file_vs_edit_comparison.md  06_find_files_vs_glob_comparison.md  07_batch_operations_comparison.md  08_grep_comparison.md  09_project_tree_comparison.md  10_write_file_comparison.md  11_list_directory_comparison.md  12_move_file_comparison.md  13_context_bundle_comparison.md  14_get_file_metadata_comparison.md  15_read_function_context_comparison.md  16_read_types_only_comparison.md  17_smart_file_selection_comparison.md  18_search_symbols_comparison.md  19_file_exists_comparison.md  20_transactions_comparison.md  21_hash_buffers_comparison.md  22_execute_sandbox_comparison.md  large_file_gofer.txt  test_file_temp.txt  test_file_temp2.txt  test_multiline2.txt  test_multiple_occur.txt  test_nonexist.txt  test_write_gofer_1.rs  test_write_native_1.rs
tests/nested_native/deep/: test_file.rs
